<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_new_single_scan" android:title="@string/action_new_scan"
        android:orderInCategory="100" app:showAsAction="ifRoom" android:icon="@android:drawable/ic_menu_camera"/>
    <item android:id="@+id/action_manage_scanned_data" android:title="@string/action_manage_scanned_data"
        android:orderInCategory="100" app:showAsAction="ifRoom" android:icon="@android:drawable/ic_menu_edit"/>
    <item android:id="@+id/action_update" android:title="@string/action_update"
        android:orderInCategory="100" app:showAsAction="never" android:icon="@android:drawable/ic_menu_share"/>
    <item android:id="@+id/action_webapi" android:title="@string/action_webapi"
        android:orderInCategory="100" app:showAsAction="never" android:icon="@android:drawable/ic_menu_compass"/>
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" android:icon="@android:drawable/ic_menu_manage"/>
</menu>
